Improved user form.

--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -1,52 +1,26 @@
-{% block field_row %}
+{% block form_row %}
 {% spaceless %}
-  <p>
-    {{ form_label(form, label|default(null)) }}<br />
-    {{ form_widget(form, {'attr': {'class':'input-text' }}) }}
-    {{ form_errors(form) }}<br />
-  </p>
+    <div class="control-group">
+        {{ form_label(form) }}
+        <div class="controls">
+            {{ form_widget(form) }}
+        </div>
+    </div>
+    {{ form_errors(form) }}
 {% endspaceless %}
-{% endblock field_row %}
+{% endblock form_row %}
 
-{% block generic_label %}
+{% block form_label %}
 {% spaceless %}
+    {% if not compound %}
+        {% set label_attr = label_attr|merge({'for': id}) %}
+    {% endif %}
     {% if required %}
-        {% set attr = attr|merge({'class': attr.class|default('') ~ ' required'}) %}
+        {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
     {% endif %}
-    <label class="req" {% for attrname,attrvalue in attr %} {{attrname}}="{{attrvalue}}"{% endfor %}>{{ label|trans }}</label>
-{% endspaceless %}
-{% endblock %}
-
-{% block field_errors %}
-{% spaceless %}
-    {% if errors|length > 0 %}
-    <ul>
-        {% for error in errors %}
-            <li>{{ error.messageTemplate|trans(error.messageParameters, 'validators') }}</li>
-        {% endfor %}
-    </ul>
+    {% if label is empty %}
+        {% set label = name|humanize %}
     {% endif %}
+    <label class="control-label" {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
 {% endspaceless %}
-{% endblock field_errors %}
-
-{% block field_widget %}
-{% spaceless %}
-    {% set type = type|default('text') %}
-    <input size="40" type="{{ type }}" {{ block('widget_attributes') }} value="{{ value }}" />
-{% endspaceless %}
-{% endblock field_widget %}
-
-{% block date_widget %}
-{% spaceless %}
-    {% if widget == 'single_text' %}
-        {{ block('field_widget') }}
-    {% else %}
-            {{ date_pattern|replace({
-                '{{ year }}':  form_widget(form.year, {'attr': {'class':'input-text' }}),
-                '{{ month }}': form_widget(form.month, {'attr': {'class':'input-text' }}),
-                '{{ day }}':   form_widget(form.day, {'attr': {'class':'input-text' }}),
-            })|raw }}
-    {% endif %}
-{% endspaceless %}
-{% endblock date_widget %}
-
+{% endblock form_label %}
