--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -2,11 +2,15 @@
 
 {% block body %}
 
-<p class="box">
-  <a href="{{ path('club_user_usersetting_index') }}" class="btn-info"><span>{% trans %}Settings{% endtrans %}</span></a>
-</p>
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a>
+        </ul>
+    </div>
+</div>
 
-<form method="post" action="{{ path('user') }}">
+<form method="post" action="{{ path('user') }}" class="form-horizontal">
 {% include "ClubUserBundle:User:form.html.twig" %}
 </form>
 
