Added help attribute on form elements.

--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -4,6 +4,9 @@
         {{ form_label(form) }}
         <div class="controls">
             {{ form_widget(form) }}
+            {% if help is defined %}
+                <span class="help-block">{{ help }}</span>
+            {% endif %}
         </div>
     </div>
     {{ form_errors(form) }}
