--- a/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
@@ -1,5 +1,4 @@
-  <hr class="noscreen" />
-  <div class="box-01">
-    <p class="nom"><input {% if novalidate is defined %}formnovalidate="true"{% endif %} type="submit" value="{% if button is defined %}{{ button }}{% else %}{% trans %}Save{% endtrans %}{% endif %}" class="input-submit" /></p>
-  </div> <!-- /box-01 -->
+<div class="form-actions">
+  <button type="submit" class="btn btn-primary">{% if button is defined %}{{ button }}{% else %}{% trans %}Save changes{% endtrans %}{% endif %}</button>
+</div>
 
