--- a/src/Club/UserBundle/Resources/views/UserSetting/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserSetting/index.html.twig
@@ -2,11 +2,9 @@
 
 {% block body %}
 
-<h2>{% trans %}User settings{% endtrans %}</h2>
-
 <p>{% trans %}Here you have some different settings that can make your profile more personal.{% endtrans %}</p>
 
-<form method="post" action="{{ path('club_user_usersetting_index') }}">
+<form method="post" action="{{ path('club_user_usersetting_index') }}" class="form-horizontal">
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'legend':'User settings'|trans} %}
 </form>
 
