--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/ui-lightness/jquery-ui-1.8.23.custom.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
     <style type="text/css">
       body {
@@ -37,6 +37,7 @@
       });
     });
     </script>
+    <script type="text/javascript" src="{{ asset('bundles/clublayout/js/bootstrap-typeahead.min.js') }}"></script>
 
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
 
