--- a/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_welcome_blog_new') }}">
+<form method="post" action="{{ path('club_welcome_blog_new') }}" class="form-horizontal">
 {% include "ClubWelcomeBundle:Blog:form.html.twig" %}
 </form>
 
