--- a/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
@@ -1,5 +1,5 @@
             {% if is_granted('ROLE_ADMIN') %}
-            <div class="well sidebar-nav">
+            <div class="well">
                 <!-- Search -->
                 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query', 'input_id':'#query_id','url':'api/users/search'} %}
                 <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search">
