--- a/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
@@ -1,4 +1,3 @@
-  <fieldset>
     <legend>{% trans %}Post blog{% endtrans %}</legend>
 
     <p>{% trans %}You are welcome to post anything to the other members here. The post will end up on the frontpage.{% endtrans %}</p>
@@ -10,9 +9,5 @@
       {{ form_errors(form.message) }}
     </p>
     {{ form_rest(form) }}
-  </fieldset>
 
-  <hr class="noscreen" />
-  <div class="box-01">
-    <p class="nom"><input formnovalidate="true" type="submit" value="{% trans %}Save{% endtrans %}" class="input-submit" /></p>
-  </div> <!-- /box-01 -->
+    {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true} %}
