--- a/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
@@ -3,11 +3,7 @@
     <p>{% trans %}You are welcome to post anything to the other members here. The post will end up on the frontpage.{% endtrans %}</p>
 
     {{ form_row(form.title) }}
-    <p>
-      {{ form_label(form.message) }}
-      {{ form_widget(form.message, {'attr': {'class':'big'}}) }}
-      {{ form_errors(form.message) }}
-    </p>
+    {{ form_row(form.message) }}
     {{ form_rest(form) }}
 
     {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true} %}
