--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_request_playermarket_new') }}">
+<form method="post" action="{{ path('club_request_playermarket_new') }}" class="form-horizontal">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
