--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -1,4 +1,9 @@
 /* WRITE YOUR CSS CODE HERE */
+textarea.big {
+    width: 80%;
+    height: 300px;
+}
+
 div.time_period {
   width: 100%;
   border: none;
