--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -1,13 +1,12 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block header  %}
+{% block header %}
 <div class="page-header">
     <h1>{% trans %}Members{% endtrans %}</h1>
 </div>
 {% endblock %}
 
-{% block body %}
-
+{% block pagenav %}
 {% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#query_query', 'input_id':'','url':'api/users/search'} %}
 
 <div class="navbar">
@@ -17,22 +16,9 @@
     </form>
   </div>
 </div>
+{% endblock %}
 
-<!-- Actions -->
-<form method="post" action="">
-<div class="box-02 bottom box">
-  <div class="f-right">
-    <strong>Sort by:</strong>
-    {{ form_widget(form.sort, {'attr': {'class':'input-text'} }) }}
-  </div> <!-- /f-right -->
-  <strong>Search:</strong>
-  {{ form_widget(form.query, {'attr': {'class':'input-text'} }) }}
-  <input type="submit" value="OK" />
-</div> <!-- /box-02 -->
-{{ form_rest(form) }}
-</form>
-
-<div class="fix" style="height: 10px;"></div>
+{% block body %}
 
 <table class="table">
   <thead>
