--- a/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
@@ -1,8 +1,8 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
 {% block body %}
-<h3 class="tit">{{ blog.title }}</h3>
-<p><span class="label label-02">{% trans with {'%date%':blog.createdAt|club_datetime,'%author%':blog.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
+<h3>{{ blog.title }}</h3>
+<h6>{% trans with {'%date%':blog.createdAt|club_datetime,'%author%':blog.user.name} %}Posted on %date% by %author%.{% endtrans %}</h6>
 
 {% if blog.user == app.user %}
 {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_welcome_blog_edit', {'id':blog.id})} %}
