--- a/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
@@ -1,6 +1,6 @@
-<h3 class="tit"><a href="{{ path('club_welcome_blog_show', {'blog_id':post.id}) }}">{{ post.title }}</a></h3>
+<h3><a href="{{ path('club_welcome_blog_show', {'blog_id':post.id}) }}">{{ post.title }}</a></h3>
 
-<p><span class="label label-02">{% trans with {'%date%':post.createdAt|club_datetime,'%author%':post.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
+<h6>{% trans with {'%date%':post.createdAt|club_datetime,'%author%':post.user.name} %}Posted on %date% by %author%.{% endtrans %}</h6>
 
 {% if post.user == app.user %}
 {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_welcome_blog_edit', {'id':post.id})} %}
@@ -13,3 +13,5 @@
 <p>{{ post.message|raw }}</p>
 
 <i><a href="{{ path('club_welcome_blog_show', {'blog_id':post.id}) }}">{% trans with {'%comments%':post.comments|length} %}There are %comments% comments on this post.{% endtrans %}</a></i>
+
+<hr>
