--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">ClubMaster</a>
+          <a class="brand" href="{{ path('homepage') }}">ClubMaster</a>
           <div class="nav-collapse collapse">
              {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
