Fixed a bunch of css.

--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -1,4 +1,8 @@
 /* WRITE YOUR CSS CODE HERE */
+table.table th.action {
+    width: 120px;
+}
+
 textarea.big {
     width: 80%;
     height: 300px;
