--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -20,7 +20,7 @@
       <th>{% trans %}Play time{% endtrans %}</th>
       <th>{% trans %}User{% endtrans %}</th>
       <th>{% trans %}Comments{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   <thead>
   <tfoot>
