--- a/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
@@ -1,14 +1,22 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>{% trans %}Create category{% endtrans %}</span></a></p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('admin_shop_category_new') }}">{% trans %}Create category{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 <table class="table">
   <thead>
     <tr>
       <th>{% trans %}Category{% endtrans %}</th>
       <th>{% trans %}Location{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
