--- a/src/Club/ShopBundle/Resources/views/AdminCategory/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('admin_shop_category_new') }}">
+<form method="post" action="{{ path('admin_shop_category_new') }}" class="form-horizontal">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
