Added action class to all tables.

--- a/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminField/index.html.twig
@@ -9,7 +9,7 @@
       <th>{% trans %}Location{% endtrans %}</th>
       <th>{% trans %}Field{% endtrans %}</th>
       <th>{% trans %}Position{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
