--- a/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
@@ -16,7 +16,7 @@
       <th>{% trans %}Stop time{% endtrans %}</th>
       <th>{% trans %}Valid from{% endtrans %}</th>
       <th>{% trans %}Valid to{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
