--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -11,7 +11,7 @@
       <th>{% trans %}Period end{% endtrans %}</th>
       <th>{% trans %}Time{% endtrans %}</th>
       <th>{% trans %}Day{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
