--- a/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
@@ -6,7 +6,7 @@
       <th>{% trans %}Date{% endtrans %}</th>
       <th>{% trans %}Time{% endtrans %}</th>
       <th>{% trans %}Users{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
