--- a/src/Club/MailBundle/Resources/views/MailLog/logs.html.twig
+++ b/src/Club/MailBundle/Resources/views/MailLog/logs.html.twig
@@ -7,7 +7,7 @@
       <th>{% trans %}Recipient{% endtrans %}</th>
       <th>{% trans %}Error{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
