--- a/src/Club/MatchBundle/Resources/views/AdminRule/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminRule/index.html.twig
@@ -11,7 +11,7 @@
       <th>{% trans %}Point won{% endtrans %}</th>
       <th>{% trans %}Match same player{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
