--- a/src/Club/MatchBundle/Resources/views/League/RecentMatches.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/RecentMatches.html.twig
@@ -6,7 +6,7 @@
       <th>{% trans %}Team one{% endtrans %}</th>
       <th style="width: 150px; text-align: center;">{% trans %}Score{% endtrans %}</th>
       <th>{% trans %}Team two{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
