--- a/src/Club/MessageBundle/Resources/views/AdminMessage/attachment.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/attachment.html.twig
@@ -19,7 +19,7 @@
         <th>{% trans %}File name{% endtrans %}</th>
         <th>{% trans %}File type{% endtrans %}</th>
         <th>{% trans %}File size{% endtrans %}</th>
-        <th>{% trans %}Action{% endtrans %}</th>
+        <th class="action">{% trans %}Action{% endtrans %}</th>
       </tr>
     </thead>
     <tbody>
