--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -12,7 +12,7 @@
       <th>{% trans %}Subject{% endtrans %}</th>
       <th>{% trans %}Sent at{% endtrans %}</th>
       <th>{% trans %}Status{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tbody>
