--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -14,9 +14,9 @@
   <table class="table">
     <thead>
       <tr>
-        <th width="80">{% trans %}Type{% endtrans %}</th>
-        <th width="300">{% trans %}Recipient{% endtrans %}</th>
-        <th width="100">{% trans %}Action{% endtrans %}</th>
+        <th>{% trans %}Type{% endtrans %}</th>
+        <th>{% trans %}Recipient{% endtrans %}</th>
+        <th class="action">{% trans %}Action{% endtrans %}</th>
       </tr>
     </thead>
     <tbody>
