--- a/src/Club/PasskeyBundle/Resources/views/AdminPasskey/index.html.twig
+++ b/src/Club/PasskeyBundle/Resources/views/AdminPasskey/index.html.twig
@@ -9,7 +9,7 @@
       <th>{% trans %}Key{% endtrans %}</th>
       <th>{% trans %}User{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
