--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/index.html.twig
@@ -11,7 +11,7 @@
       <th>{% trans %}Max usage{% endtrans %}</th>
       <th>{% trans %}Expires at{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
