--- a/src/Club/ShopBundle/Resources/views/AdminOrderStatus/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrderStatus/index.html.twig
@@ -11,7 +11,7 @@
       <th>{% trans %}Delivered{% endtrans %}</th>
       <th>{% trans %}Cancelled{% endtrans %}</th>
       <th>{% trans %}Priority{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
