--- a/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
@@ -10,7 +10,7 @@
       <th>{% trans %}Price{% endtrans %}</th>
       <th>{% trans %}Start date{% endtrans %}</th>
       <th>{% trans %}Expire date{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
