--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -7,7 +7,7 @@
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Start date{% endtrans %}</th>
       <th>{% trans %}Expire date{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tbody>
