--- a/src/Club/ShopBundle/Resources/views/Order/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/index.html.twig
@@ -15,7 +15,7 @@
       <th>{% trans %}Status{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Updated at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
