--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -5,7 +5,7 @@
     <th>&#160;</th>
     <th>{% trans %}Product name{% endtrans %}</th>
     <th width="80">{% trans %}Price{% endtrans %}</th>
-    <th>{% trans %}Action{% endtrans %}</th>
+    <th class="action">{% trans %}Action{% endtrans %}</th>
   </thead>
   <tfoot>
     <tr class="bg">
