--- a/src/Club/TaskBundle/Resources/views/AdminTask/index.html.twig
+++ b/src/Club/TaskBundle/Resources/views/AdminTask/index.html.twig
@@ -12,7 +12,7 @@
       <th>{% trans %}Last run at{% endtrans %}</th>
       <th>{% trans %}Next run at{% endtrans %}</th>
       <th>{% trans %}Task interval{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
