--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
@@ -10,7 +10,7 @@
       <th>{% trans %}First date{% endtrans %}</th>
       <th>{% trans %}End date{% endtrans %}</th>
       <th>{% trans %}Level{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
