--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
@@ -8,7 +8,7 @@
     <tr>
       <th>{% trans %}Team{% endtrans %}</th>
       <th>{% trans %}User{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
