--- a/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
@@ -10,7 +10,7 @@
   <thead>
     <tr>
       <th>{% trans %}Group{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
