--- a/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
+++ b/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
@@ -6,7 +6,7 @@
       <th>{% trans %}Number{% endtrans %}</th>
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
