--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
@@ -10,7 +10,7 @@
       <th>{% trans %}Title{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Updated at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
