--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -8,7 +8,7 @@
     <tr>
       <th>{% trans %}Shipping{% endtrans %}</th>
       <th>{% trans %}Price{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
