--- a/src/Club/TeamBundle/Resources/views/AdminLevel/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminLevel/index.html.twig
@@ -8,7 +8,7 @@
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
