--- a/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
@@ -8,7 +8,7 @@
     <tr>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Note{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
+      <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
