--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -53,7 +53,7 @@
       <div class="row-fluid">
 
         <div class="span3">
-            <!-- {% render "ClubLayoutBundle:Misc:Logo" %} -->
+            {% render "ClubLayoutBundle:Misc:Logo" %}
             {% include "ClubLayoutBundle:Default:user_form.html.twig" %}
             {% include "ClubLayoutBundle:Default:login_form.html.twig" %}
             {% include "ClubLayoutBundle:Default:search_form.html.twig" %}
